[package]
name = "vfhm"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = ["builder"]
builder = []

[[bench]]
name = "jquery"
harness = false

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
fnv = "1"
phf = { version = "0.11", features = ["macros"] }
reqwest = { version = "0.11", features = ["blocking"] }
